modify auth, handle user association with data
